--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@
     padding: 10px;
     background: transparent;
     border-radius: 5px;
+    
   }
   
   .render-chat {
@@ -108,4 +109,19 @@
     border: none;
     height: 30px;
     width: 300px;
+  }
+
+  .values {
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    margin: 100px;
+  }
+
+  .each-value {
+    display: flex;
+    justify-content: space-between;
+    height: 200px;
+    margin: 10px;
+    width: 100px;
   }
