--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,10 @@
     margin: 10px 0px 20px 0px;
     border-top: #3c3b3d 2px solid;
   }
+
+  .profile {
+    display: flex;
+    margin: 100px;
+    justify-content: center;
+    position: center;
+  }
